# arbitrum-stylus-multi-contract-example

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: arbitrum-dep-update.yml  ci.yml  e2e.yml
apps/frontend/: next.config.ts  package.json  pnpm-lock.yaml
apps/frontend/src/abi/: Polls.sol  Polls.ts  VoterRegistry.sol  VoterRegistry.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/api/rpc/: route.ts
apps/frontend/src/components/: connect-button.tsx  create-poll.tsx  footer.tsx  header.tsx  poll-card.tsx  poll-list.tsx  providers.tsx  tx-status.tsx  voter-registration.tsx
apps/frontend/src/components/ui/: input.tsx  skeleton.tsx
apps/frontend/src/config/: contracts.ts  wagmi.ts
apps/frontend/src/hooks/: use-polls.ts  use-voter-registry.ts
contracts/polls/: Cargo.toml  package.json
contracts/polls/src/: lib.rs  main.rs
contracts/voter-registry/: Cargo.toml  package.json  rust-toolchain.toml
contracts/voter-registry/src/: lib.rs  main.rs
nitro-devnode/: run-dev-node.sh
scripts/: deploy.sh  funds.sh  package.json  smoke.sh
