[package]
name = "polls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus"]
description = "Polls contract for onchain voting — creates polls and tallies votes from registered voters"

[dependencies]
alloy-primitives = "1.5.7"
alloy-sol-types = "1.5.7"
stylus-sdk = "0.10.0"
voter-registry = { path = "../voter-registry", version = "0.1.0", features = ["contract-client-gen"] }

[dev-dependencies]
stylus-sdk = { version = "0.10.0", features = ["stylus-test"] }
voter-registry = { path = "../voter-registry", version = "0.1.0", features = ["contract-client-gen"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "voter-registry/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []

[[bin]]
name = "polls-abi"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

